2009-03-06  Alberto Garcia  <agarcia@igalia.com>

	Patch by Mox Soini (ext-mox.soini@nokia.com)

	* tests/TEST-CASES.txt
	* tests/check-hildon-banner.c
	* tests/check-hildon-note.c
	* src/hildon-banner.c
	* src/hildon-code-dialog.c
	* src/hildon-date-editor.c (real_set_calendar_icon_state)
	* src/hildon-time-editor.c
	* examples/hildon-lookup-example.c (main):
	Replace obsolete icon names with new ones.

	* src/hildon-find-toolbar-private.h:
	* src/hildon-find-toolbar.c (hildon_find_toolbar_init)
	(-hildon_find_toolbar_emit_search):
	Remove find button and change icon of close button.

	Fixes: NB#104819 (Clean up old icon names from hildon-widgets)

2009-03-05  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-time-button.c (hildon_time_button_new_step):
	Use the "touch-selector" property to set the selector directly
	when creating the object.

2009-03-05  Alejandro G. Castro  <alex@igalia.com>

	Added a new example application that allows tuning the pannable
	area and replaced defines with properties in order to simplify the
	tuning: PROP_DRAG_INERTIA, PROP_PANNING_THRESHOLD,
	PROP_SCROLLBAR_FADE_DELAY, PROP_BOUNCE_STEPS, PROP_FORCE and
	PROP_DIRECTION_ERROR_MARGIN.

	* examples/hildon-pannable-area-tuning-example.c: New example
	application.
	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init),
	(hildon_pannable_area_init),
	(hildon_pannable_area_get_property),
	(hildon_pannable_area_set_property),
	(hildon_pannable_area_launch_fade_timeout),
	(hildon_pannable_area_adjust_value_changed),
	(hildon_pannable_axis_scroll),
	(hildon_pannable_area_motion_notify_cb),
	(hildon_pannable_area_scroll_cb),
	(hildon_pannable_area_button_release_cb): We have converted some
	of the defines that control the widget to properties to simplify
	the tuning.

2009-03-05  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_map)
	(hildon_app_menu_unmap): Make the menu temporary when it's mapped,
	so it's closed if a new window appears.
